fixing the z-index bugs on the tabs component

--- a/src/base_components/Breadcrumbs/styles.css
+++ b/src/base_components/Breadcrumbs/styles.css
@@ -24,5 +24,6 @@
     background: #fff;
     width: 100%;
     margin-bottom: 0;
+    z-index: 1;
   }
 }
